修改pom，解决静态审查问题